# Tic-Tac-Toe

./: LICENSE  README.md  TIC-TAC-TOE.cabal  functional.cabal  stack.yaml
src/: Game.hs  Input.hs  Interface.hs  Logic.hs  Main.hs  Rendering.hs
