cabal-version:       2.2

name:                TIC-TAC-TOE
version:             2.1
homepage:            
license:             NONE
license-file:        LICENSE
author:              Giovana Reis, Henrique Souza, Thalles Stanziola
maintainer:          
category:            Game
build-type:          Simple

executable functional
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Game
                     , Logic
                     , Interface
                     , Input
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5 , mtl == 2.2.2
                     , array
                     , gloss
                     , random
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
